Revision history for Cv.pm

0.32 - 2013-09-xx
     * fix memoryleak of trackbar

0.31 - 2013-08-20
     * split Cv::More
       - add nonzero() - gets indices of each point
     * add Cv::Features2d (OpenCV-2.4.5)

0.30 - 2013-07-28
     * fixed cvFindHomography returns
     * supports arrref instead of CvMat for src points:
       - findHomography, perspectiveTransform
       - see sample/find_obj.pl
     * tested with OpenCV-2.4.6, and fixed compile error

0.29 - 2013-06-02
     * added %CONFIGURE_REQUIRES, %TEST_REQUIRES with Makefile.PL
     * make the typemap from typemap.in. Fixed the structures
       CvSubdiv2DPoint, CvStarDetectorParams and CvSURFParams which
       depend on the version of OpenCv.

0.28 - 2013-05-12
     * fixed Cv::Histogram::ranges
     * added %build_reqs
     * renames TestTypemap.xs to t.xs 

0.27 - 2013-05-05
     * renames Test.xs TestTypemap.xs

0.26 - 2013-05-02
     * separates packages: Cv::BGCodeBookModel, Cv::Histogram,
       Cv::Subdiv2D (classified as a legacy in OpenCV)
       - Cv::Pango (experimental)
     * bundle Devel/CheckLib.pm
     * test with OpenCV-2.4.5
     * rewrote CV_SIZEOF

0.25 - 2013-03-31
     * accept pkg-config results even if it returns shared libs
       (libopencv_core.so) or cc parameter (e.g. -lopencv_core)
       for building Cv
     * stopped alternative code for cvEncodeImage() since 2.4.4
     * removed Cv::Test for testing
     * rewrote t/2matchTemplate.t, t/2misc.t
     * removed Cv::Nihongo.pod for Japanease document

0.24 - 2013-02-24
     * replaced Perl_croak with Carp::croak to get better error info
     * rewrote Cv::import using Getopt for use Cv -option
     * split parts of Cv module into Cv::Test and Cv::Qt
     * rewrote startup defining AUTOLOAD statically
     * moved $STORAGE from Cv::Seq to Cv as $CV::STORAGE
     * put scattered docs into Cv::JA
     * fixed cvCvtSeqToArray() negative index
     * $arr->new() supported calling with class as $arr->Cv::Image::new()