@@ -52,6 +52,8 @@ static void delete_win_callback(const char* key, const char* hash)
 	}
 }
 
+#if _CV_VERSION() < _VERSION(2,0,0)
+
 static void cb_trackbar(int pos)
 {
 	HV* Cv_TRACKBAR = get_hv("Cv::TRACKBAR", 0);
@@ -85,6 +87,31 @@ static void cb_trackbar(int pos)
 	}
 }
 
+#else
+
+static void cb_trackbar2(int pos, VOID* userdata)
+{
+	callback_t *p = (callback_t*)userdata;
+	if (!p) return;
+	if (p->u.t.pos == p->u.t.lastpos) return;
+	if (p->u.t.value) sv_setiv(p->u.t.value, p->u.t.pos);
+	if (p->callback) {
+		dSP;
+		ENTER;
+		SAVETMPS;
+		PUSHMARK(SP);
+		EXTEND(SP, 5);
+		PUSHs(sv_2mortal(newSViv(p->u.t.pos)));
+		PUSHs(p->u.m.userdata? p->u.t.userdata : &PL_sv_undef);
+		PUTBACK;
+		call_sv(p->callback, G_DISCARD);
+		FREETMPS;
+		LEAVE;
+	}
+	p->u.t.lastpos = p->u.t.pos;
+}
+
+#endif
 
 static void cb_mouse(int event, int x, int y, int flags, VOID* userdata)
 {
@@ -3055,7 +3082,7 @@ cvConvertImage(const CvArr* src, CvArr* dst, int flags=0)
 
 MODULE = Cv	PACKAGE = Cv
 int
-cvCreateTrackbar(const char* trackbarName, const char* windowName, SV* value, int count, SV* onChange = NULL)
+cvCreateTrackbar(const char* trackbarName, const char* windowName, SV* value, int count, SV* onChange = NULL, SV* userdata = NULL)
 PREINIT:
 	callback_t* callback; 
 	HV* Cv_TRACKBAR;
@@ -3064,7 +3091,6 @@ INIT:
 	if (!(Cv_TRACKBAR = get_hv("Cv::TRACKBAR", 0))) {
 		Perl_croak(aTHX_ "Cv::cvCreateTrackbar: can't get \%Cv::TRACKBAR");
 	}
-	RETVAL = -1;
 CODE:
 	Newx(callback, 1, callback_t);
 	bzero(callback, sizeof(callback));
@@ -3072,15 +3098,16 @@ CODE:
 	if (onChange && SvROK(onChange) && SvTYPE(SvRV(onChange)) == SVt_PVCV) {
 		SvREFCNT_inc(callback->callback = (SV*)SvRV(onChange));
 	}
+	callback->u.t.userdata = 0; /* cvCreateTrackbar2() */
+	if (userdata) {
+		SvREFCNT_inc(callback->u.t.userdata = userdata);
+	}
 	callback->u.t.value = 0;
 	callback->u.t.lastpos = callback->u.t.pos = 0;
-	callback->u.t.userdata = 0; /* cvCreateTrackbar2() */
 	if (SvOK(value) && SvTYPE(value) == SVt_IV) {
 		SvREFCNT_inc(callback->u.t.value = value);
 		callback->u.t.lastpos = callback->u.t.pos = SvIV(value);
 	}
-	RETVAL = cvCreateTrackbar(trackbarName,	windowName,
-				&callback->u.t.pos, count, cb_trackbar);
 	q = hv_fetch(Cv_TRACKBAR, windowName, strlen(windowName), 0);
 	if (q && SvROK(*q) && SvTYPE(SvRV(*q)) == SVt_PVAV) { SV* sv;
 		av = (AV*)SvRV(*q);
@@ -3092,6 +3119,13 @@ CODE:
 		Perl_croak(aTHX_ "Cv::cvCreateTrackbar: Cv::TRACKBAR was broken");
 	}
 	av_push(av, newSViv(PTR2IV(callback)));
+#if _CV_VERSION() < _VERSION(2,0,0)
+	RETVAL = cvCreateTrackbar(trackbarName, windowName,
+				&callback->u.t.pos, count, cb_trackbar);
+#else
+	RETVAL = cvCreateTrackbar2(trackbarName, windowName,
+				&callback->u.t.pos, count, cb_trackbar2, callback);
+#endif
 OUTPUT:
 	RETVAL
 
